// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password when align set to left functions as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to left when input is focused functions as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to left when input is focused when input looses focus renders as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to left when input is focused when value changed functions as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to left when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to left when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  align="left"
>
  <div
    className="frost-password"
  >
    <Text
      align="left"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right functions as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right when input is focused functions as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right when input is focused when input looses focus renders as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right when input is focused when value changed functions as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when align set to right when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  align="right"
>
  <div
    className="frost-password"
  >
    <Text
      align="right"
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input frost-text-align-right"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in functions as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in when input is focused functions as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in when input is focused when input looses focus renders as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in when input is focused when value changed functions as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when class name passed in when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  className="foobar"
>
  <div
    className="frost-password foobar"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false functions as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false when input is focused functions as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false when input is focused when input looses focus renders as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false when input is focused when value changed functions as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to false when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  disabled={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to true functions as expected 1`] = `
<Password
  disabled={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to true when input is focused functions as expected 1`] = `
<Password
  disabled={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when disabled set to true when input is focused when input looses focus renders as expected 1`] = `
<Password
  disabled={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      disabled={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false functions as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false when input is focused functions as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false when input is focused when input looses focus renders as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false when input is focused when value changed functions as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to false when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  error={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true functions as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true when input is focused functions as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true when input is focused when input looses focus renders as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true when input is focused when value changed functions as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when error set to true when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  error={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      error={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input frost-text-error"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in functions as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in when input is focused functions as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in when input is focused when input looses focus renders as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in when input is focused when value changed functions as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when no properties passed in when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set functions as expected 1`] = `
<Password
  onChange={[MockFunction]}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={[MockFunction]}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set when input is focused functions as expected 1`] = `
<Password
  onChange={[MockFunction]}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={[MockFunction]}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set when input is focused when input looses focus renders as expected 1`] = `
<Password
  onChange={[MockFunction]}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={[MockFunction]}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set when input is focused when value changed functions as expected 1`] = `
<Password
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
      ],
    }
  }
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "baz",
            ],
          ],
        }
      }
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
        Array [
          null,
        ],
      ],
    }
  }
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "baz",
            ],
            Array [
              null,
            ],
          ],
        }
      }
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when onChange set when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
        Array [
          null,
        ],
      ],
    }
  }
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "baz",
            ],
            Array [
              null,
            ],
          ],
        }
      }
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false functions as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false when input is focused functions as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false when input is focused when input looses focus renders as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false when input is focused when value changed functions as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to false when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  readOnly={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={false}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to true functions as expected 1`] = `
<Password
  readOnly={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to true when input is focused functions as expected 1`] = `
<Password
  readOnly={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when readOnly set to true when input is focused when input looses focus renders as expected 1`] = `
<Password
  readOnly={true}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      readOnly={true}
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false functions as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false when input is focused functions as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false when input is focused when input looses focus renders as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false when input is focused when value changed functions as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to false when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  revealable={false}
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when revealable set to true functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when input looses focus renders as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when reveal toggled functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="text"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="text"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Hide
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when reveal toggled when reveal toggled again functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when value changed functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when value changed when reveal toggled functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="text"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="text"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Hide
    </div>
  </div>
</Password>
`;

exports[`Password when revealable set to true when input is focused when value changed when reveal toggled when reveal toggled again functions as expected 1`] = `
<Password
  revealable={true}
>
  <div
    className="frost-password frost-password-revealable"
  >
    <Text
      className="frost-password-input"
      type="password"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
    <div
      className="frost-password-reveal"
      onClick={[Function]}
      role="button"
    >
      Show
    </div>
  </div>
</Password>
`;

exports[`Password when value set to empty string functions as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to empty string when input is focused functions as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to empty string when input is focused when input looses focus renders as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to empty string when input is focused when value changed functions as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to empty string when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to empty string when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  value=""
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value=""
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="foobar"
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="foobar"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when clear button fade in animation has completed functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="foobar"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when input looses focus renders as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="foobar"
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when input looses focus when clear button fade out animation has completed functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="foobar"
        />
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when value changed functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value="baz"
        />
        <button
          className="frost-text-clear frost-fade-in"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when value changed when clear button is pressed functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
        <button
          className="frost-text-clear frost-fade-out"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          tabIndex={-1}
        >
          <_default>
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </_default>
        </button>
      </div>
    </Text>
  </div>
</Password>
`;

exports[`Password when value set to non-empty string when input is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Password
  value="foobar"
>
  <div
    className="frost-password"
  >
    <Text
      className="frost-password-input"
      type="password"
      value="foobar"
    >
      <div
        className="frost-text frost-password-input"
      >
        <input
          className="frost-text-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="password"
          value=""
        />
      </div>
    </Text>
  </div>
</Password>
`;
